--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 							<div class="flex-container reverse container small">
 								<!-- column start -->
 								<div class="six-columns top-padding-60">
-									<a href="project.html" class="portfolio-content-bg-box pointer-large hover-box hidden-box animsition-link">
+									<a href="project-movie.html" class="portfolio-content-bg-box pointer-large hover-box hidden-box animsition-link">
 										<div class="portfolio-content-bg hover-img overlay-anim-box2 overlay-dark-bg-2" data-animation="overlay-anim2" style="background-image:url(assets/images/projects/mov-1.png)"></div>
 									</a>
 								</div><!-- column end -->
