--- a/project-port.html
+++ b/project-port.html
@@ -153,7 +153,7 @@
 			</section><!-- page-head end -->
 
 			<div class="text-center top-bottom-padding-50 red-bg" data-midnight="black">
-				<a href="https://dipakaec.github.io/React-portfolio/#" target="blank" class="pointer-large animsition-link overlay-btn-box">
+				<a href="https://dipak-react-portfolio.vercel.app/" target="blank" class="pointer-large animsition-link overlay-btn-box">
 					<span class="overlay-btn" data-text="View Live">View Live</span>
 				</a>
 			</div>
@@ -169,7 +169,7 @@
 							<div class="content-right-margin-20">
 								<ul class="text-color-4 small-title-oswald list-dots">
 									<li>React JS</li>
-									<li></li>
+									<li>CSS</li>
 									
 								</ul>
 							</div>
@@ -177,7 +177,7 @@
 						<!-- column start -->
 						<div class="eight-columns bottom-padding-30">
 							<div class="content-left-margin-20">
-								<p class="p-style-large text-color-4">React Portfolio App is my Personal Portfolio build in react js.Here I showcase my office and personal projects</p>
+								<p class="p-style-large text-color-4">React Portfolio App is my Personal Portfolio build in react js. <br> Here I showcase my office and personal projects</p>
 							</div>
 						</div><!-- column end -->
 					</div><!-- flex-container end -->
@@ -234,6 +234,16 @@
 					<div class="bottom-padding-60">
 						<a class="photo-popup pointer-zoom" href="assets/images/projects/port-6.png">
 							<img src="assets/images/projects/port-6.png" alt="title">
+						</a>
+					</div>
+					<div class="bottom-padding-60">
+						<a class="photo-popup pointer-zoom" href="assets/images/projects/port-6.png">
+							<img src="assets/images/projects/port-7.png" alt="title">
+						</a>
+					</div>
+					<div class="bottom-padding-60">
+						<a class="photo-popup pointer-zoom" href="assets/images/projects/port-6.png">
+							<img src="assets/images/projects/port-8.png" alt="title">
 						</a>
 					</div>
 				</div><!-- container end -->
