--- a/project-weather.html
+++ b/project-weather.html
@@ -169,6 +169,7 @@
 								<ul class="text-color-4 small-title-oswald list-dots">
 									<li>React JS</li>
 									<li>Open Weather API</li>
+									<li>CSS</li>
 									
 								</ul>
 							</div>
